# 3D-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
.github/workflows/: cmake-linux.yml  cmake-windows.yml
Scenes/: main_scene.cpp  main_scene.h  orth_scene.cpp  orth_scene.h
include/: Camera.h  CollisionEngine.h  DebugRendering.h  Entity_t.h  PhysicsEngine.h  Scene.h  Shader.h  Storage.h  Window.h  logging.h  vector.h
include/DebugRendering/: DebugBox.h  DebugEntry.h  DebugLine.h
shaders/: cube_box.frag  debug_line.frag  debug_line_vertex.glsl  fragment.glsl  vertex.glsl
src/: Camera.cpp  CollisionEngine.cpp  DebugRendering.cpp  DebugRendering.h  Entity_t.cpp  PhysicsEngine.cpp  Scene.cpp  Shader.cpp  Storage.cpp  logging.cpp  vector.cpp  window.cpp
src/DebugRendering/: DebugBox.cpp  DebugEntry.cpp  DebugLine.cpp
